--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^6.11.2",
     "helmet": "^7.2.0",
     "ioredis": "^5.7.0",
+    "isomorphic-dompurify": "^2.14.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
